fixes footer on tablet and desktop sizes

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -3,8 +3,7 @@
 @use "./partials/resets";
 @use "./partials/fonts";
 
-// /* for mobile*/
-
+// Mobile styles
 .nav {
   margin: auto;
   display: flex;
@@ -47,7 +46,6 @@
     width: 100%;
     font-weight: 600;
   }
-
 }
 
 .hero {
@@ -79,6 +77,7 @@
     padding-top: 1.5rem;
     padding-bottom: 1rem;
   }
+
   &__title {
     font-size: 1.5rem;
     padding-left: 1rem;
@@ -93,7 +92,7 @@
     padding-left: 1rem;
   }
 
-   &__quote {
+  &__quote {
     @include mobile-subheader-typekit;
     padding-top: 1rem;
     padding-left: 1rem;
@@ -110,7 +109,6 @@
   &__copy {
     margin: 1rem;
   }
-
 }
 
 .photo-gallery {
@@ -131,6 +129,7 @@
     flex-direction: column;
     padding-bottom: 2rem;
   }
+
   &__images-item {
     height: auto;
     padding: 1rem;
@@ -168,7 +167,6 @@
     color: $white;
   }
 
-  &__contact-location,
   &__contact-link {
     @include mobile-footerCopy-typekit;
     color: $silver;
@@ -191,149 +189,264 @@
   }
 }
 
-// /* media query for tablet*/
+.footer__image {
+  display: block;
+  margin-bottom: 1rem;
+}
 
+
+// Tablet styles
 @media (min-width: 768px) and (max-width: 1279px) {
-
   .nav {
     margin: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     background-color: $band-site-black;
-  }
-  
 
-  .nav__image {
-    max-width: 7.5rem;
-  }
+    &__image {
+      max-width: 7.5rem;
+    }
 
-  .nav__list {
-    justify-content: space-between;
-    margin: 0;
-    padding: 0 0 0 2rem;
-    list-style: none;
-    display: flex;
-    width: 28%;
-    font-family: "Avenir";
-    font-weight: 400;
+    &__list {
+      justify-content: space-between;
+      margin: 0;
+      padding: 0 0 0 2rem;
+      list-style: none;
+      display: flex;
+      width: 28%;
+      font-family: "Avenir";
+      font-weight: 400;
+    }
   }
 
   .hero {
     height: 25vh;
+
+    &__title {
+      font-family: "Avenir";
+      font-weight: 600;
+      font-size: 2rem;
+    }
   }
 
-  .hero__title {
-    font-family: "Avenir";
-    font-weight: 600;
-    font-size: 2rem;
+  .about {
+    &__container {
+      padding: 5rem;
+    }
+
+    &__band-image {
+      width: 80vw;
+    }
   }
 
-  .about__container {
-    padding: 5rem;
+  .article {
+    &__copy-column {
+      display: flex;
+      margin-left: 5rem;
+      margin-right: 5rem;
+    }
+
+    &__copy {
+      width: 50%;
+      padding: 0 1rem;
+      box-sizing: border-box;
+    }
   }
 
-  .about__band-image {
-    width: 80vw;
+  .photo-gallery {
+    &__images {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+
+      &-item {
+        width: 30%;
+        height: auto;
+        padding: 1rem;
+      }
+    }
   }
 
-  .article__copy-column {
-    display: flex;
-    margin-left: 5rem;
-    margin-right: 5rem;
-  }
+  .footer {
+    padding: 0 1.5rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
 
-  .article__copy {
-    width: 50%;
-    padding: 0 1rem;
-    box-sizing: border-box;
-  }
+    &__main {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-  .photo-gallery__images {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    
-  }
+    &__title {
+      font-size: 2.25rem;
+      line-height: 2.75rem;
+      padding: 3rem 0 3.5rem 0;
+    }
 
-  .photo-gallery__images-item {
-    width: 30%;
-    height: auto;
-    padding: 1rem;
+    &__social {
+      padding: 0 8rem 0 0;
+
+      &-link {
+        margin-right: 2rem;
+      }
+    }
+
+    &__logo {
+      display: inherit;
+      height: 1.5rem;
+      width: 7.5rem;
+    }
+
+    &__contact {
+      &-name {
+        font-size: 1rem;
+        line-height: 1.5rem;
+        padding-bottom: 1.5rem;
+      }
+
+      &-location {
+        padding-bottom: 0.25rem;
+      }
+
+      &-link {
+        margin-bottom: 2.5rem;
+      }
+
+      &-container {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
   }
 }
 
-// /* media query for  desktops*/
-
+// Desktop styles
 @media (min-width: 1280px) {
-
   .nav {
     margin: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     background-color: $band-site-black;
-  }
 
-  .nav__image {
-    max-width: 7.5rem;
-  }
+    &__image {
+      max-width: 7.5rem;
+    }
 
-  .nav__list {
-    justify-content: space-between;
-    margin: 0;
-    padding: 0 0 0 2rem;
-    list-style: none;
-    display: flex;
-    width: 28%;
-    font-family: "Avenir";
-    font-weight: 400;
+    &__list {
+      justify-content: space-between;
+      margin: 0;
+      padding: 0 0 0 2rem;
+      list-style: none;
+      display: flex;
+      width: 28%;
+      font-family: "Avenir";
+      font-weight: 400;
+    }
   }
 
   .hero {
     height: 25vh;
+
+    &__title {
+      font-family: "Avenir";
+      font-weight: 600;
+      font-size: 2rem;
+    }
   }
 
-  .hero__title {
-    font-family: "Avenir";
-    font-weight: 600;
-    font-size: 2rem;
+  .about {
+    &__band-image {
+      width: 90vw;
+    }
+
+    &__container {
+      padding: 5rem;
+    }
   }
 
+  .article {
+    &__copy-column {
+      display: flex;
+      margin-left: 5rem;
+      margin-right: 5rem;
+    }
 
-  .about__band-image {
-    width: 90vw;
-    
+    &__copy {
+      width: 50%;
+      padding: 0 1rem;
+      box-sizing: border-box;
+    }
   }
 
-  .about__container {
-    padding: 5rem;
+  .photo-gallery {
+    &__images {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+
+      &-item {
+        width: 30%;
+        height: auto;
+        padding: 1rem;
+      }
+    }
   }
 
-  .article__copy-column {
-    display: flex;
-    margin-left: 5rem;
-    margin-right: 5rem;
-  }
+  .footer {
+    padding: 0 1.5rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
 
-  .article__copy {
-    width: 50%;
-    padding: 3rem 1rem;
-    box-sizing: border-box;
-  }
+    &__main {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-  .photo-gallery__images {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    
-  }
+    &__title {
+      font-size: 2.25rem;
+      line-height: 2.75rem;
+      padding: 3rem 0 3.5rem 0;
+    }
 
-  .photo-gallery__images-item {
-    width: 30%;
-    height: auto;
-    padding: 1rem;
+    &__social {
+      padding: 0 8rem 0 0;
+
+      &-link {
+        margin-right: 2rem;
+      }
+    }
+
+    &__logo {
+      display: inherit;
+      height: 1.5rem;
+      width: 7.5rem;
+    }
+
+    &__contact {
+      &-name {
+        font-size: 1rem;
+        line-height: 1.5rem;
+        padding-bottom: 1.5rem;
+      }
+
+      &-location {
+        padding-bottom: 0.25rem;
+      }
+
+      &-link {
+        margin-bottom: 2.5rem;
+      }
+
+      &-container {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
   }
 }
